--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=${DATABASE_URL}
+# Spring data Postgresql
+spring.datasource.driverClassName=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
+
+# atualiza automaticamente caso seja criado um atributo ou tabela no banco de dados
+spring.jpa.hibernate.ddl-auto=update
